Cambio en index de desarrollo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			<li><a href="#contacto">Contacto</a></li>
 		</ul>
 	</nav>
-
+	<p>cambio rama desarrollo
+	</p>
 	<header id="inicio" class="hero-section">
 		<h1>Descubre lo último en tecnología bebiendo café</h1>
 		<h2 class="subtitulo">Charlas, eventos y simposios sobre tecnología</h2>
